correct z-index coupon

--- a/src/scss/components/_coupon.scss
+++ b/src/scss/components/_coupon.scss
@@ -4,11 +4,14 @@
 	height: 100%;
 	top: 0;
 	left: 0;
+	z-index: 100;
 	background-color: rgba(0, 0, 0, 0.7);
+
 }
 
 .coupon{
 	display: none;
+	overscroll-behaviour: contain;
 }
 
 .coupon--visible{
