--- a/src/scss/components/_cover.scss
+++ b/src/scss/components/_cover.scss
@@ -48,7 +48,7 @@
 
 .title-block {
 	position: absolute;
-	top: 150px;
+	top: 140px;
 	left: 50%;
 	width: 80%;
 	transform: translate(-50%, 0);
