--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -195,10 +195,12 @@
   height: 100%;
   top: 0;
   left: 0;
+  z-index: 100;
   background-color: rgba(0, 0, 0, 0.7); }
 
 .coupon {
-  display: none; }
+  display: none;
+  overscroll-behaviour: contain; }
 
 .coupon--visible {
   display: block; }
@@ -387,7 +389,7 @@
 
 .title-block {
   position: absolute;
-  top: 150px;
+  top: 140px;
   left: 50%;
   width: 80%;
   transform: translate(-50%, 0);
@@ -604,9 +606,6 @@
   @media all and (max-width: 619px) {
     .indicators__list--item {
       width: 300px; } }
-  @media all and (max-width: 360px) {
-    .indicators__list--item {
-      width: 200px; } }
 
 .indicators__list--item-element-title {
   font-size: 1.5em;
